--- a/public/css/app.css
+++ b/public/css/app.css
@@ -941,9 +941,6 @@ body {
     padding-left: 20px;
     padding-right: 20px;
   }
-  .jobMobileSpace{
-    display: block;
-  }
   .app-aside,
   .navbar-header {
     width: 200px;
@@ -1103,13 +1100,25 @@ body {
     display:none;
   }
 }
+
 @media (max-width: 440px) {
+  .jobMobileSpace {
+    display: block;
+  }
   .empJobTableAddBtn1{
     display:none;
   }
 }
+@media (min-width: 441px) {
+  .jobMobileSpace {
+    display: none;
+  }
+}
 
 @media (max-width: 767px) {
+  .jobMobileSpaceBig{
+    display: block;
+  }
   h4.white{
     padding-left: 25px;
     padding-right: 25px;
@@ -1263,6 +1272,9 @@ html.bg {
 }
 
 @media (min-width: 768px) {
+  .jobMobileSpaceBig{
+    display: none;
+  }
   h4.white{
     padding-left: 25px;
     padding-right: 25px;
@@ -4904,7 +4916,6 @@ div.signupBox {
   background-color: white;
   border-radius: 25px;
   position: relative;
-  left: -15px;
 }
 
 #threshInfo{
@@ -5250,8 +5261,6 @@ div.dashTops{
     font-size: 10px;
     padding: 4px;
   }
-
-
   .buyInner{
     display: inline-block;!important;
     width: 230px;!important;
